	               updated on the pc, although that does not change anything.

TODO: provide template-based, interpreted databases much like the
  AppInfo classes now have.
TODO: give the knotes conduit a decent test mode.
TODO: only re-write a local database if it is changed.
TODO: move set-category code from subclasses into PilotRecordBase.

2005-06-05  Adriaan de Groot
* I learned to make Chinese dumplings yesterday. That's a much better use
  of a saturday afternoon than bug hunting, don't you think?
* Put lots of effort into the dox for PilotDateEntry, normalized a lot
  of things, gave things slightly more sensible names. This is work towards
  implementing the DatabaseInterpreter for appointments, so you can treat
  the data on the Pilot as a sequence of (libkcal) Events instead of as
  binary blobs.
* Patch from Dylan G applied that replaces 15s and 16s in the code with a
  defined constant (there already was one, just not used consistently). 
  Did some more rationalizing, finally removed the CATEGORY_COUNT define
  which was just a duplicate.

2005-05-27  Adriaan de Groot
* Start of the PIM meeting! Way!
* Committed some critical data-loss fixes yesterday. Too late for the KDE 3.4.1 release.
  Argh. I think it would have been better not to touch BRANCH at all and leave it
  at the same buggy state as in KDE 3.4.0
* Fairly large-scale deprecation of functions in lib/, finally factored out the
  shared attributes/category/id stuff from records and AppCategory objects.

2005-05-22  Adriaan de Groot
* Gratuitously update the version number, call this one "kind" (Dutch for
  "child", or otherwise short for "kind of liable to eat your data").
  This sort-of makes me wish we'd just left BRANCH totally unchanged
  since the last release. KDE 3.4.1 tomorrow.

2005-05-20  Adriaan de Groot
* Split PISOCK_LIB into PISOCK_LIB and PISOCK_LDFLAGS. This makes it possible
  to slip the include and library dir for pilot-link right in front, which in