@@ -29,109 +29,17 @@
 
 #include "options.h"
 
-#include <kaboutdata.h>
+#include "pluginfactory.h"
 
 #include "abbrowser-conduit.h"
 #include "abbrowser-setup.h"
-
-#include "abbrowser-factory.moc"
 
 extern "C"
 {
 
 void *init_conduit_address()
 {
-	return new AbbrowserConduitFactory;
+	return new ConduitFactory<AbbrowserWidgetSetup,AbbrowserConduit>(0,"abbrowserconduit");
 }
 
 }
-
-
-KAboutData *AbbrowserConduitFactory::fAbout = 0L;
-
-
-
-AbbrowserConduitFactory::AbbrowserConduitFactory(QObject *p, const char *n) :
-	KLibFactory(p,n)
-{
-	FUNCTIONSETUP;
-
-	fInstance = new KInstance("abbrowserconduit");
-	fAbout = new KAboutData("abbrowserconduit",
-		I18N_NOOP("Abbrowser Conduit for KPilot"),
-		KPILOT_VERSION,
-		I18N_NOOP("Configures the Abbrowser Conduit for KPilot"),
-		KAboutData::License_GPL,
-		"(C) 2001, Dan Pilone\n(C) 2002-2003, Reinhold Kainhofer");
-	fAbout->addAuthor("Greg Stern",
-		I18N_NOOP("Primary Author"));
-	fAbout->addAuthor("Adriaan de Groot",
-		I18N_NOOP("Maintainer"),
-		"groot@kde.org",
-		"http://www.cs.kun.nl/~adridg/kpilot");
-	fAbout->addAuthor("Reinhold Kainhofer", I18N_NOOP("Maintainer"),
-		"reinhold@kainhofer.com", "http://reinhold.kainhofer.com");
-	fAbout->addCredit("David Bishop", I18N_NOOP("UI"));
-
-}
-
-AbbrowserConduitFactory::~AbbrowserConduitFactory()
-{
-	FUNCTIONSETUP;
-
-	KPILOT_DELETE(fInstance);
-	KPILOT_DELETE(fAbout);
-}
-
-/* virtual */ QObject *AbbrowserConduitFactory::createObject( QObject *p,
-	const char *n,
-	const char *c,
-	const QStringList &a)
-{
-	FUNCTIONSETUP;
-
-#ifdef DEBUG
-	DEBUGCONDUIT << fname
-		<< ": Creating object of class "
-		<< c
-		<< endl;
-#endif
-
-	if (qstrcmp(c,"ConduitConfigBase")==0)
-	{
-		QWidget *w = dynamic_cast<QWidget *>(p);
-
-		if (w)
-		{
-			return new AbbrowserWidgetSetup(w,n);
-		}
-		else
-		{
-			kdError() << k_funcinfo
-				<< ": Couldn't cast parent to widget."
-				<< endl;
-			return 0L;
-		}
-	}
-
-	if (qstrcmp(c,"SyncAction")==0)
-	{
-		KPilotDeviceLink *d = dynamic_cast<KPilotDeviceLink *>(p);
-
-		if (d)
-		{
-			return new AbbrowserConduit(d,n,a);
-		}
-		else
-		{
-			kdError() << k_funcinfo
-				<< ": Couldn't cast parent to KPilotDeviceLink"
-				<< endl;
-			return 0L;
-		}
-	}
-
-	return 0L;
-}
-
-
