@@ -29,38 +29,10 @@
 ** Bug reports and questions can be sent to kde-pim@kde.org
 */
 
-#include <klibloader.h>
-
-class KInstance;
-class KAboutData;
-
-class AbbrowserConduitFactory : public KLibFactory
-{
-Q_OBJECT
-
-public:
-	AbbrowserConduitFactory(QObject * = 0L,const char * = 0L);
-	virtual ~AbbrowserConduitFactory();
-
-public:
-	static KAboutData *about() { return fAbout; } ;
-
-protected:
-	virtual QObject* createObject( QObject* parent = 0,
-		const char* name = 0,
-		const char* classname = "QObject",
-		const QStringList &args = QStringList() );
-private:
-	KInstance *fInstance;
-	static KAboutData *fAbout;
-	static const char *fGroup;
-
-} ;
-
 extern "C"
 {
 
-void *init_libaddressconduit();
+void *init_conduit_address();
 
 }
 
